# KIRITE-layer

./: .gitignore  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.ja.md  README.md  ROADMAP.md  package-lock.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
circuits/: membership.circom
cli/src/: index.ts
cli/src/commands/: config.ts  deposit.ts  pool.ts  transfer.ts  withdraw.ts
cli/src/utils/: config.ts  display.ts  wallet.ts
docs/: architecture.md  deployment-guide.md  internal-security-review.md  protocol-spec.md
examples/: 01-confidential-transfer.ts  02-shield-pool-deposit.ts  03-stealth-address.ts  README.md
programs/kirite/: Cargo.toml  README.md
programs/kirite-staking/: Cargo.toml
programs/kirite-staking/src/: lib.rs
programs/kirite/src/: errors.rs  events.rs  lib.rs
programs/kirite/src/instructions/: create_stealth.rs  deposit.rs  governance.rs  initialize.rs  transfer.rs  withdraw.rs
programs/kirite/src/state/: mod.rs  protocol.rs  shield_pool.rs  stealth.rs
programs/kirite/src/utils/: crypto.rs  math.rs  membership_vk.rs  mod.rs  validation.rs  zk.rs
scripts/: idl-publish.sh  init-standard-pools.mjs  recover-buffer.cjs  test-zk-e2e.mjs  test-zk-edge.mjs  test-zk-overnight.mjs  verify.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  errors.ts  index.ts  kirite-zk.mjs  types.ts  zk.mjs
sdk/src/confidential/: encryption.ts  index.ts  proof.ts  transfer.ts
sdk/src/shield-pool/: deposit.ts  pool-state.ts  withdraw.ts
sdk/src/stealth/: address.ts  registry.ts  scan.ts
sdk/src/types/: bn.d.ts  tweetnacl.d.ts
sdk/src/utils/: connection.ts  index.ts  keypair.ts  transaction.ts
sdk/tests/: client.test.ts  confidential.test.ts  shield-pool.test.ts
tests/: test-devnet.ts  test-full.ts
