[package]
name = "kirite"
version = "0.1.0"
description = "KIRITE Privacy Protocol — Confidential transfers, shield pools, and stealth addresses on Solana"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "kirite"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"
bytemuck = { version = "1.14", features = ["derive"] }
bs58 = "0.5"
