[package]
name = "kirite"
description = "KIRITE Privacy Protocol on-chain program"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "kirite"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-poseidon = "3.1"
bytemuck = { workspace = true }
bs58 = { workspace = true }
curve25519-dalek = { workspace = true }
groth16-solana = "0.2.0"
